# Ursinaxball

./: .gitignore  .pre-commit-config.yaml  README.md  example.py  example_multi.py  play_obstacle.py  pyproject.toml  requirements.txt  ruff.toml  setup.py  tox.ini
.github/workflows/: tests.yml
benchmarks/: multiple_game_pyinstrument.html  single_game_pyinstrument.html  single_game_pyperf.html
examples/: example_load.py  example_map.py  example_multi.py  example_solo.py
tests/: test_game.py  test_stadium.py
ursinaxball/: __init__.py  benchmark.py  common_values.py  constants.py  example.py  game.py  utils.py  version.py
ursinaxball/game/: common_values.py  game.py
ursinaxball/game/modules/: __init__.py
ursinaxball/game/objects/: stadium_object.py
ursinaxball/game/stadiums/: futsal-big.hbs  penalty-soccer.hbs
ursinaxball/modules/: __init__.py
ursinaxball/modules/bots/: __init__.py  advanced_bots.py  bot.py  common_bots.py
ursinaxball/modules/physics/: __init__.py  fn_base.py  physics_handler.py
ursinaxball/modules/player/: __init__.py  player_data.py  player_handler.py
ursinaxball/modules/systems/: __init__.py  game_config.py  game_recorder.py  game_renderer.py  game_score.py
ursinaxball/objects/: __init__.py  stadium.py  stadium_object.py
ursinaxball/objects/base/: __init__.py  ball.py  (+18 more)
ursinaxball/shaders/: __init__.py  sdf_circle.py
ursinaxball/stadiums/: big.hbs  classic.hbs  futsal-big.hbs  futsal-classic.hbs  futsal-classic.json5  obstacle-map-winky.hbs  penalty-soccer.hbs  rounded.hbs
ursinaxball/utils/: benchmark.py  constants.py  enums.py  misc.py  rendering.py
(+27 files in other folders)
