[tool.poetry]
name = "ursinaxball"
version = "0.2.3"
description = ""
authors = ["Wazarr <jeje_04@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.23.5"
msgpack = "^1.0.4"
panda3d = "1.10.13"
ursina = "5.0.0"
scipy = "^1.10.0"
numba = "^0.56.4"
screeninfo = "^0.8.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
tox = "^4.5.1"
pre-commit = "^3.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
