[tool.poetry]
name = "ursinaxball"
version = "0.2.4"
description = ""
authors = ["Wazarr <jeje_04@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = "^1.23.5"
msgpack = "^1.0.4"
panda3d = "^1.10.15"
ursina = "5.0.0"
scipy = "^1.10.0"
screeninfo = "^0.8.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
tox = "^4.5.1"
pyperf = "^2.6.1"
pyinstrument = "^4.5.3"
plotly = "^5.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
